--- a/scss/_lk.scss
+++ b/scss/_lk.scss
@@ -849,15 +849,17 @@
     max-width: 100%;
 
     .lk-info__btns {
+      overflow: auto;
+      padding-bottom: 3rem;
       display: flex;
       flex-direction: row;
       gap: 1.6rem;
-      padding-bottom: 0;
       border-bottom: none;
     }
 
     .lk-info__btn {
       display: flex;
+      text-wrap:nowrap;
       padding: 1.6rem 2.4rem;
       height: 7.4rem;
       border-radius: 2rem;
